app/assets/stylesheets/store/partials/_sidebar.css.scss
aside#sidebar {
  font-family: $ff_regular;
  font-size: 14px;

  #sidebar_wrapper {
    background: $greyblue url('sidebar-texture.jpg') top left;
    border: solid;
    border-color: $grey;
    border-width: 3px;
    -moz-border-image: url(sidebar-border.png) 3 repeat;
    -webkit-border-image: url(sidebar-border.png) 3 repeat;
    -o-border-image: url(sidebar-border.png) 3 repeat;
    border-image: url(sidebar-border.png) 3 repeat;

  }

  #searchwrapper {
    position: relative;
    height:34px;/*follow your image's size*/

    background-color: #FFF;
    padding:0px;
    margin:10px;

    border: solid;
    border-color: $brown;
    border-width: 3px 3px 3px 3px;
    -moz-border-image: url(search-border.png) 3 round;
    -webkit-border-image: url(search-border.png) 3 round;
    -o-border-image: url(search-border.png) 3 round;
    border-image: url(search-border.png) 3 fill round;

    @media only screen {
      @media (min-width: 768px) and (max-width: 979px) {
        width: 140px;
      }

      @media (max-width: 767px) {
        width: 385px;
      }

      @media (max-width: 480px) {
        width: 270px;
      }

    }

    form {
      display:inline ;
    }
  }



  #keywords {
    border:0px;
    width: 140px;
    padding: 10px 0px 10px 10px;
    background-color: transparent;
    float:left;

    @media only screen {
      @media (min-width: 768px) and (max-width: 979px) {
        width: 95px;
      }

      @media (max-width: 767px) {
        width: 335px;
      }

      @media (max-width: 480px) {
        width: 220px;
      }

    }
  }

  .searchbox_submit {
    border: 0px;
    background-color: transparent;
    padding: 8px;
    position:absolute; /*important*/
    top:0px;
    right: 0px;
    width:20px;
    height:20px;
  }


  div[data-hook="homepage_sidebar_navigation"], div[data-hook="taxon_sidebar_navigation"] {
    padding: 10px;
  }
}

#sidebar_products_search {
  h6.filter-title {
    font-size: 120%;
    font-family: $ff_regular;
    font-weight: 500;
    text-transform: none;

    color: $brown;
    border: solid;
    border-color: $brown;
    border-width: 3px 0 0 0;
    -moz-border-image: url(border.png) 3 round;
    -webkit-border-image: url(border.png) 3 round;
    -o-border-image: url(border.png) 3  round;
    border-image: url(border.png) 3 fill round;
  }
}

nav#taxonomies {

  font-size: 14px;

  h6.taxonomy-root {
    font-size: 140%;
    text-transform: none;
    font-family: $ff_regular;
    font-weight:normal;
    padding-top: 14px;
    margin-bottom: 0px;
    border: solid;
    border-color: $brown;
    border-width: 3px 0 0 0;
    -moz-border-image: url(border.png) 3 round;
    -webkit-border-image: url(border.png) 3 round;
    -o-border-image: url(border.png) 3  round;
    border-image: url(border.png) 3 fill round;
  }

  .taxons-list li a {
    font-size: 14px;
    font-family: $ff_base;
    &:hover {
      text-decoration: underline;
    }
  }

  a {
    color: $brown;
    text-decoration: none;
  }
}

